<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fingerprint_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView

        android:textSize="13sp"
        android:layout_gravity="right"
        android:id="@+id/fingerprint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_description_pf"
        android:textColor="#5f5f5f"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center"
            android:id="@+id/fingerprint_status"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/fingerprint_hint_pf"
            android:textColor="#6f6f6f" />
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/fingerprint_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_fp_40px_pf"
            android:contentDescription="@string/description_fingerprint_icon_pf"/>


    </LinearLayout>

</LinearLayout>