<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/corner_dialog"
    android:layout_gravity="center"
    android:padding="12dp"
    android:layoutDirection="ltr"
    android:orientation="vertical">
    <TextView
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/color_text_btn_key_pf"
        android:text="@string/no_fingerprints_title_pf"/>
    <TextView
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/color_text_btn_key_pf"
        android:text="@string/no_fingerprints_message_pf"/>

    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="4dp">

        <Button
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:text="انصراف"
            android:textColor="#3f3f3f"
            android:id="@+id/cancel_button_setting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <Button
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="12sp"
            android:text="@string/settings_pf"
            android:textColor="#3f3f3f"
            android:id="@+id/setting_button_setting"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>