<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_pf"
    android:layout_width="match_parent"
    android:weightSum="10"
    android:layoutDirection="ltr"
    android:layout_height="match_parent">

    <ImageView
        style="?pf_lock_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/PFLockScreenStyle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">
        <RelativeLayout
            android:layoutDirection="ltr"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.6"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <ImageView
                style="?pf_lock_screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/PFLockScreenStyle" />
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:textSize="@dimen/btn_fp_txt"
                    android:id="@+id/title_text_view"
                    style="?pf_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/lock_screen_title_pf"
                    android:theme="@style/PFLockScreenTitleTextStyle" />

                <com.beautycoder.pflockscreen.views.PFCodeView
                    android:id="@+id/code_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp" />
            </LinearLayout>




        </RelativeLayout>
        <RelativeLayout
            android:layoutDirection="ltr"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:background="@drawable/bg_top_radius"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="7.4">
            <LinearLayout
                android:gravity="center"
                android:layout_above="@+id/relativeBtnPfNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_1"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="right"
                            android:gravity="center"
                            android:text="1"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_2"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="2"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_3"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="left"
                            android:gravity="center"
                            android:text="3"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_4"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="right"
                            android:gravity="center"
                            android:text="4"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_5"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="5"
                            android:background="@drawable/touch_selector_pf"/>
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_6"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="left"
                            android:gravity="center"
                            android:text="6"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_7"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="right"
                            android:gravity="center"
                            android:text="7"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_8"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="8"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_9"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="left"
                            android:gravity="center"
                            android:text="9"
                            android:background="@drawable/touch_selector_pf" />
                    </FrameLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:tint="@color/tint_image_finger_pf"
                            android:id="@+id/button_finger_print"
                            style="?pf_fingerprint_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="right"
                            android:background="@drawable/bg_finger_print"
                            android:gravity="center"
                            android:text="fp"
                            android:theme="@style/PFLockScreenFingerPrintButtonStyle" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.beautycoder.pflockscreen.MyTextView
                            android:textStyle="bold"
                            android:elevation="4dp"
                            android:textColor="@color/color_text_btn_key_pf"
                            android:textSize="@dimen/btn_fp_key"
                            android:id="@+id/button_0"
                            style="?pf_key_button"
                            android:layout_width="@dimen/button_lock_screen_fp_size"
                            android:layout_height="@dimen/button_lock_screen_fp_size"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="0"
                            android:background="@drawable/touch_selector_pf"/>
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/button_right"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text=""
                            android:visibility="gone" />

                        <ImageView
                            android:tint="@color/tint_image_delete_pf"
                            android:id="@+id/button_delete"
                            style="?pf_delete_button"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_gravity="left"
                            android:background="@drawable/side_button_background_pf"
                            android:gravity="center"
                            android:text="fp"
                            android:theme="@style/PFLockScreenDeleteButtonStyle"
                            android:visibility="gone" />



                    </FrameLayout>

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/mb_relative_btn_fp"
                android:id="@+id/relativeBtnPfNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <TextView

                    android:layout_centerHorizontal="true"
                    android:visibility="visible"
                    android:textColor="@color/color_text_btn_key_pf"
                    android:textSize="@dimen/btn_fp_txt"
                    android:id="@+id/button_left"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_centerInParent="true"
                    android:text="@string/forgot_pf"
                    />
                <Button

                    android:textSize="@dimen/btn_fp_txt"
                    android:textColor="@color/color_text_btn_next_pf"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/button_next"
                    style="?pf_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_pf"
                    android:background="@drawable/bg_btn_next"
                    android:visibility="visible" />

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>



</RelativeLayout>
